--- a/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScanner.apk/res/values-sk/strings.xml
@@ -334,4 +334,6 @@
 
     <string name="today">Dnes</string>
     <string name="tomorrow">Zajtra</string>   
+     <string name="visit">Otvoriť</string>    
+     <string name="permission_management">Povolenia</string>     
 </resources>  
