--- a/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
@@ -368,4 +368,5 @@
      <string name="relay_deny_permission_msg">Hovory nemožno uskutočniť bez povolenia na nahrávanie zvuku</string>
      <string name="relay_grant_permissions_on_phone">Udeľte povolenie na nahrávanie zvuku do telefónu</string>
 	
+    <string name="voice_control_deny_permission_msg">Hlasové ovládanie sa teraz nedá použiť. Najprv povoľte tejto aplikácii nahrávať zvuk.</string>
 </resources>
