--- a/Slovak/main/MiuiPackageInstaller.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiPackageInstaller.apk/res/values-sk/strings.xml
@@ -969,4 +969,58 @@ Všetky predchádzajúce používateľské údaje budú uložené."</string>
     <string name="virus_warning_title_2">Táto aplikácia obsahuje tieto vírusy:</string>
     <string name="warning_msg_virus">Nájdené vírusy</string>
     <string name="warning_msg_virus_name">Táto aplikácia obsahuje vírusy: %1$s</string>	
+    
+     <string name="action_bar_report_link_des">Upozornenie aplikácie</string>
+     <string name="ads_summary">Ľuďom, ktorí si nainštalovali %1$s, sa tiež páčilo</string>
+     <string name="ads_summary_default_value">Ľuďom, ktorí si nainštalovali túto aplikáciu, sa tiež páčilo</string>
+     <string name="app_store_missing_title">„App Store nie je nainštalovaný“</string>
+     <string name="copy">Kopírovať</string>
+     <string name="dlg_appstore_notice">"Nemôžeme overiť pravosť alebo bezpečnosť aplikácií zo zdrojov mimo Google Play."</string>
+     <string name="dlg_game_center_intercept_game_center_install">Inštalovať z Mi Games</string>
+     <string name="dlg_game_center_intercept_msg">Inštalácia hier tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Mi Games, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
+     <string name="dlg_mimarket_intercept_mimarket_install">Inštalovať z obchodu Mi App Store</string>
+     <string name="dlg_mimarket_intercept_msg">Inštalácia aplikácií tretích strán môže predstavovať bezpečnostné riziká. Stiahnite si a nainštalujte Mi App Store, aby ste získali prístup k zabezpečeným verziám aplikácií.</string>
+     <string name="exit_install_button">"Neinštalovať"</string>
+     <string name="game_center_install">Inštalovať z Mi Games</string>
+     <string name="game_center_install_tips">Stiahnite si a nainštalujte Mi Games a získajte ďalšie funkcie</string>
+     <string name="game_center_intercept_warning_msg">"Táto aplikácia nebola skontrolovaná spoločnosťou Xiaomi na prítomnosť vírusov. Nainštalujte si túto aplikáciu z Hier, aby ste sa vyhli bezpečnostným rizikám."</string>
+     <string name="game_center_lunch_error">Najprv si nainštalujte Mi Games</string>
+     <string name="help_app_permissions" />
+     <string name="increment_install_downloading">Preberá sa %1$s</string>
+     <string name="increment_install_network_error_cancel">Zrušiť</string>
+     <string name="increment_install_network_error_msg">Vyskytla sa chyba siete. Stále môžete pokračovať v inštalácii neoficiálnej aplikácie. Chcete pokračovať?</string>
+     <string name="increment_install_network_error_ok">Pokračovať</string>
+     <string name="increment_install_network_error_title">Chyba siete</string>
+     <string name="increment_install_pause_for_wifi">Čaká sa na sieť</string>
+     <string name="increment_preparing">Pripravuje sa…</string>
+     <string name="install_confirm_dialog_message">Túto aplikáciu vytvorila spoločnosť Google. Ak chcete túto aplikáciu normálne používať, mali by ste si nainštalovať služby Google Play. Ak si túto aplikáciu nainštalujete teraz, vaše zariadenie sa môže správať nesprávne. Napriek tomu nainštalovať?</string>
+     <string name="install_confirm_dialog_negative_button">Zrušiť</string>
+     <string name="install_confirm_dialog_positive_button">Inštalovať</string>
+     <string name="install_confirm_dialog_title">Pozor</string>
+     <string name="install_confirm_question_des_10">"Ak ste ochotný riskovať a chcete pokračovať v inštalácii, autorizujte inštaláciu v časti Zabezpečenie > Spravovať aplikácie > Povolenia > Aplikácie s možnými rizikami. Ak nemôžete nájsť \" Aplikácie s možnými rizikami\", aktualizujte aplikáciu Zabezpečenie a skúste to znova."</string>
+     <string name="install_confirm_text_gms">Túto aplikáciu vytvorila spoločnosť Google. Pred inštaláciou tejto aplikácie nainštalujte služby Google Play. Bez tohto rámca nemusí aplikácia fungovať správne.</string>
+     <string name="install_control_cancel_vip_account_install">Ukončiť</string>
+     <string name="install_control_lite_mode_explain_des">Táto aplikácia pochádza z neznámeho zdroja a nemusí fungovať v zjednodušenom režime.</string>
+     <string name="install_control_lite_mode_solution_des">"Túto aplikáciu si môžete nainštalovať aniway.
+Prípadne môžete vypnúť zjednodušený režim a skúsiť to znova."</string>
+     <string name="install_control_vip_account_install">Požiadať o verziu beta</string>
+     <string name="install_from_appstore_hint">Odporúčame vám nainštalovať aplikáciu z Google Play</string>
+     <string name="install_vip_account_mode_explain_des">Toto je beta verzia aplikácie. Pred inštaláciou požiadajte o povolenia na testovanie beta.</string>
+     <string name="install_vip_account_mode_solution_des">Požiadať o verziu beta</string>
+     <string name="intercept_confirm_dialog_message">%1$s sa pokúša nainštalovať %2$s. Ak chcete pokračovať, overte svoju identitu.</string>
+     <string name="intercept_confirm_dialog_positive">Overiť</string>
+     <string name="intercept_confirm_dialog_title">Pozor</string>
+     <string name="message_appstore_verify_has_new_version">Novšia verzia tejto aplikácie je k dispozícii v Google Play. Chcete ju nainštalovať?</string>
+     <string name="message_appstore_verify_inconsistent">"Podpis tejto aplikácie sa líši od podpisu v Google Play, bude bezpečnejšie nainštalovať aplikáciu odtiaľ."</string>
+     <string name="message_appstore_verify_ok">Verzia tejto aplikácie v App Store prešla našimi bezpečnostnými testami, odporúčame vám nainštalovať aplikáciu odtiaľ.</string>
+     <string name="message_full_scanning">Úplné skenovanie…</string>
+     <string name="message_install_in_market">Odporúčame vám nainštalovať aplikáciu z Google Play</string>    
+     <string name="message_quick_scanning">Rýchle skenovanie…</string>
+     <string name="miui_failed_solution_7">Stiahnite si najnovšiu verziu tejto aplikácie.</string>
+     <string name="miui_failed_solution_8">Stiahnite si aplikáciu z dôveryhodného zdroja.</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="permdesc_togglePermissions">Umožňuje spustiť používateľské rozhranie na prepínanie povolení aplikácie. Bežné aplikácie by to nikdy nemali potrebovať.</string>
+     <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
+     <string name="risk_warning_bottom_button">Inštalovať z dôveryhodného zdroja</string>
+     <string name="spannable_continue_text">Rozumiem rizikám. Napriek tomu nainštalovať.</string>     
 </resources>
